# rust-static-link-sandbox

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.alpine-custom-rust  Dockerfile.alpine-official-rust  Dockerfile.debian-rust  Dockerfile.debian-static-libs  LICENSE  README.md  build-docker-images.sh
.devcontainer/: Dockerfile  devcontainer.json
crates/hello-world/: Cargo.toml
crates/proc-macros/: Cargo.toml
crates/proc-macros/src/: main.rs
crates/with-block-utils/: Cargo.toml
crates/with-block-utils/src/: main.rs
crates/with-libsqlite/: Cargo.toml
crates/with-libsqlite/src/: main.rs
crates/with-libudev/: Cargo.toml  pkgconfhack.sh
crates/with-libudev/src/: main.rs
crates/with-open-ssl/: Cargo.toml
crates/with-open-ssl-vendored/: Cargo.toml
crates/with-open-ssl-vendored/src/: main.rs
src/: docker.rs  environments.rs  main.rs  tests.rs
