[package]
name = "sandbox"
authors = ["Adam Nelson <adam@elastio.com>"]
description = "Rust script to run the static linking sandbox tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duct = "0.13.5"
color-eyre = "0.5"
cargo_metadata = "0.14.0"
structopt = "0.3.23"
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
once_cell = "1.8.0"
shiplift = "0.7.0"
tokio = { version = "1.11.0", features = [ "full" ] }
serde = "1.0.130"
serde_json = "1.0.67"
futures = "0.3.17"
