[package]
name = "with-block-utils"
description = """
A binary Rust crate which doesn't do anything but has a dependency on the `block-utils` 
crate which has a transitive dependency on `libudev-sys`.

Read the description of the `with-libudev` test crate first, to make sure you understand
the issue there.

This crate is exercising something else: will the `libudev-zero` alternative implementation of
`libudev` which is built in to the `debian-static-libs` build image work for discovering block devices?
"""
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block-utils = "0.10"

[package.metadata.test-crate]

# The libudev-sys crate's build.rs uses pkgconfig to find libudev
#
# When targeting musl pkgconfig thinks it's being invoked in a cross-compiled build, 
# so you need to explicitly tell it shut up and let it happen.
#
# The PKG_CONFIG_ALL_STATIC doesn't actually cause anything to be statically linked, it 
# passes `--static` to `pkg-config` which will cause `pkg-config` to list all dependent libs
# as well, which isn't necessary when dynamically linking.
env = ["PKG_CONFIG_ALLOW_CROSS=1", "PKG_CONFIG_ALL_STATIC=1"]