[package]
name = "with-open-ssl-vendored"
description = """
A binary Rust crate which doesn't do anything but has a dependency on OpenSSL.

This uses the `openssl` crate with `vendored` feature, meaning it will build its own OpenSSL binaries from source
"""
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[package.metadata.test-crate]
env = []