[package]
name = "with-open-ssl"
description = """
A binary Rust crate which doesn't do anything but has a dependency on OpenSSL.

This uses the `openssl` crate with default features, meaning it will try to use the system OpenSSL
"""
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10"

[package.metadata.test-crate]
env = []